# OCCT-Metal

./: CMakeLists.txt
adm/cmake/: occt_macros.cmake
resources/DrawResources/: DrawPlugin
src/Draw/TKViewerTest/: EXTERNLIB.cmake
src/Visualization/: TOOLKITS.cmake
src/Visualization/TKMetal/: CMakeLists.txt  EXTERNLIB.cmake  FILES.cmake  PACKAGES.cmake
src/Visualization/TKMetal/Metal/: FILES.cmake  Metal_AspectState.hxx  Metal_BackgroundRenderer.hxx  Metal_BackgroundRenderer.mm  Metal_Buffer.hxx  Metal_Buffer.mm  Metal_BufferPool.hxx  Metal_BufferPool.mm  Metal_CappingAlgo.hxx  Metal_CappingAlgo.mm  Metal_Caps.hxx  Metal_Caps.mm  Metal_Clipping.hxx  Metal_Clipping.mm  Metal_ComputeEncoder.hxx  Metal_ComputeEncoder.mm  Metal_ComputePipeline.hxx  Metal_ComputePipeline.mm  Metal_Context.hxx  Metal_Context.mm  Metal_DepthPeeling.hxx  Metal_DepthPeeling.mm  Metal_Flipper.hxx  Metal_Flipper.mm  Metal_Font.hxx  Metal_Font.mm  Metal_FrameBuffer.hxx  Metal_FrameBuffer.mm  Metal_FrameStats.hxx  Metal_FrameStats.mm  Metal_FrameStatsPrs.hxx  Metal_FrameStatsPrs.mm  Metal_GeometryEmulator.hxx  Metal_GeometryEmulator.mm  Metal_GraduatedTrihedron.hxx  Metal_GraduatedTrihedron.mm  Metal_GraphicDriver.hxx  Metal_GraphicDriver.mm  Metal_GraphicDriverFactory.hxx  Metal_GraphicDriverFactory.mm  (+67 more)
src/Visualization/TKMetal/Metal/Shaders/: Metal_Shaders.metal
tests/metal/: begin  end  grids.list  metal_standalone_test.mm
tests/metal/clear/: A1  A2  A3
tests/metal/driver/: A1  A2
tests/metal/materials/: A1  A2  A3
tests/metal/window/: A1  A2
(+3 files in other folders)
